[gd_scene format=3 uid="uid://ckk5he413v12t"]

[ext_resource type="Script" uid="uid://cnwcyamknfvfo" path="res://ESCENAS/Quiz/Scripts/quiz_escena.gd" id="1_tqyif"]
[ext_resource type="Script" uid="uid://cjn6e4rbmgwc1" path="res://ESCENAS/Quiz/Scripts/Question.gd" id="2_ft7jj"]
[ext_resource type="Resource" uid="uid://dlkusclu0m3ou" path="res://ESCENAS/Quiz/Resource/Pregunta28.tres" id="3_8vkml"]
[ext_resource type="Resource" uid="uid://b5tff0epabcjx" path="res://ESCENAS/Quiz/Resource/Pregunta27.tres" id="4_ki6v3"]
[ext_resource type="Resource" uid="uid://pju7tgrvs1vp" path="res://ESCENAS/Quiz/Resource/Pregunta26.tres" id="5_0tl42"]
[ext_resource type="Resource" uid="uid://bybbbnok8jbeh" path="res://ESCENAS/Quiz/Resource/Pregunta25.tres" id="6_l8ibo"]
[ext_resource type="Resource" uid="uid://u126iulrpqo7" path="res://ESCENAS/Quiz/Resource/Pregunta24.tres" id="7_mwgg6"]
[ext_resource type="Resource" uid="uid://btjh34i4eqlfh" path="res://ESCENAS/Quiz/Resource/Pregunta23.tres" id="8_cqhsh"]
[ext_resource type="Resource" uid="uid://1fjalub66vld" path="res://ESCENAS/Quiz/Resource/Pregunta22.tres" id="9_113at"]
[ext_resource type="Resource" uid="uid://bv5ck7xqr7404" path="res://ESCENAS/Quiz/Resource/Pregunta21.tres" id="10_b0w2j"]
[ext_resource type="Resource" uid="uid://o7mmubebxa3p" path="res://ESCENAS/Quiz/Resource/Pregunta1.tres" id="11_fng3s"]
[ext_resource type="Resource" uid="uid://bm3ngqchxvl3o" path="res://ESCENAS/Quiz/Resource/Pregunta2.tres" id="12_4j62u"]
[ext_resource type="Resource" uid="uid://1yxhr8qe0uxs" path="res://ESCENAS/Quiz/Resource/Pregunta3.tres" id="13_ruprd"]
[ext_resource type="Resource" uid="uid://duxd6hxghb056" path="res://ESCENAS/Quiz/Resource/Pregunta4.tres" id="14_vtyew"]
[ext_resource type="Resource" uid="uid://cvho3ixemavjx" path="res://ESCENAS/Quiz/Resource/Pregunta8.tres" id="15_4c4p7"]
[ext_resource type="Texture2D" uid="uid://cituovjvfcath" path="res://ASSETS/Sprites/Menu_Quimica/Periodic_Table/tablaPequeña.png" id="15_8vkml"]
[ext_resource type="Resource" uid="uid://c64ojnyabt8cp" path="res://ESCENAS/Quiz/Resource/Pregunta10.tres" id="16_yrive"]
[ext_resource type="Texture2D" uid="uid://dli0rwpdva628" path="res://ASSETS/Sprites/Menu_Quimica/Periodic_Table/TablaPeriodica.png" id="17_3s5pe"]
[ext_resource type="Texture2D" uid="uid://b2yaqnr3sg7ac" path="res://ASSETS/Sprites/X Square Button.png" id="17_mgpl5"]
[ext_resource type="Resource" uid="uid://d3blg4ua4w05r" path="res://ESCENAS/Quiz/Resource/Pregunta12.tres" id="17_twig1"]
[ext_resource type="Texture2D" uid="uid://cushew3t5l6a1" path="res://ASSETS/Sprites/Questionmark Square Button.png" id="18_ju7yy"]
[ext_resource type="Resource" uid="uid://dvc542h2p6wb2" path="res://ESCENAS/Quiz/Resource/Pregunta14.tres" id="18_u1o3b"]
[ext_resource type="AudioStream" uid="uid://bsj484u8enicv" path="res://ASSETS/Audios/Audio/808522__licht2003__error.mp3" id="18_xcs45"]
[ext_resource type="FontFile" uid="uid://dikplhd3wbrh5" path="res://ASSETS/Letras/Kenney pixel/Kenney Pixel.ttf" id="19_ju7yy"]
[ext_resource type="Resource" uid="uid://dyp3ia0iv8tn" path="res://ESCENAS/Quiz/Resource/Pregunta16.tres" id="19_rovev"]
[ext_resource type="Resource" uid="uid://bvj41sqccni4a" path="res://ESCENAS/Quiz/Resource/Pregunta18.tres" id="20_jobji"]
[ext_resource type="Resource" uid="uid://3qg57bl1325y" path="res://ESCENAS/Quiz/Resource/Pregunta20.tres" id="21_irir1"]
[ext_resource type="Resource" uid="uid://h8ehfdpi3otw" path="res://ESCENAS/Quiz/Resource/Pregunta5.tres" id="22_gcgrw"]
[ext_resource type="Texture2D" uid="uid://bx1j3axpewa0e" path="res://ASSETS/Sprites/WoodTable.png" id="32_yrive"]
[ext_resource type="Texture2D" uid="uid://c37oovjg4qerk" path="res://ASSETS/TileSets/TileSet-ChemestryValley/Hud/Elementos-UI/woodenBorder.png" id="33_yrive"]
[ext_resource type="AudioStream" uid="uid://xrwixcj05gma" path="res://ASSETS/Audios/Audio/404359__kagateni__success2 (mp3cut.net)(1).wav" id="36_4c4p7"]
[ext_resource type="Texture2D" uid="uid://g71ito0vuc8j" path="res://ASSETS/Sprites/Menu_Quimica/Create_table/book-menu-pag.png" id="37_twig1"]
[ext_resource type="AudioStream" uid="uid://bxkori3x40jwq" path="res://ASSETS/Audios/Audio/freesound_community-ticking-clock_1-27477(1).mp3" id="40_u1o3b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u1o3b"]
atlas = ExtResource("37_twig1")
region = Rect2(0, 0, 488, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_rovev"]
atlas = ExtResource("37_twig1")
region = Rect2(488, 0, 488, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_jobji"]
atlas = ExtResource("37_twig1")
region = Rect2(976, 0, 488, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_irir1"]
atlas = ExtResource("37_twig1")
region = Rect2(1464, 0, 488, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcgrw"]
atlas = ExtResource("37_twig1")
region = Rect2(1952, 0, 488, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_g57kk"]
atlas = ExtResource("37_twig1")
region = Rect2(2440, 0, 488, 360)

[sub_resource type="SpriteFrames" id="SpriteFrames_ktjol"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1o3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rovev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jobji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irir1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcgrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g57kk")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yrive"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1o3b"]
bg_color = Color(1, 1, 0.63529414, 0.078431375)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rovev"]
bg_color = Color(1, 1, 0.63529414, 0.078431375)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jobji"]
bg_color = Color(1, 1, 0.63529414, 0.078431375)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_twig1"]
bg_color = Color(1, 1, 0.63529414, 0.078431375)

[node name="Control" type="Control" unique_id=285637305]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_tqyif")
quiz_Data = Array[ExtResource("2_ft7jj")]([ExtResource("3_8vkml"), ExtResource("4_ki6v3"), ExtResource("5_0tl42"), ExtResource("6_l8ibo"), ExtResource("7_mwgg6"), ExtResource("8_cqhsh"), ExtResource("9_113at"), ExtResource("10_b0w2j"), ExtResource("11_fng3s"), ExtResource("12_4j62u"), ExtResource("13_ruprd"), ExtResource("14_vtyew"), ExtResource("15_4c4p7"), ExtResource("16_yrive"), ExtResource("17_twig1"), ExtResource("18_u1o3b"), ExtResource("19_rovev"), ExtResource("20_jobji"), ExtResource("21_irir1"), ExtResource("22_gcgrw")])
color_YES = Color(0, 1, 0, 1)
color_NO = Color(1, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="." unique_id=476034397]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 688.0
texture = ExtResource("32_yrive")

[node name="TextureRect2" type="TextureRect" parent="." unique_id=2021537693]
layout_mode = 0
offset_left = 1016.0
offset_right = 1152.0
offset_bottom = 88.0
texture = ExtResource("33_yrive")

[node name="ExitButton" type="Button" parent="." unique_id=520370881]
layout_mode = 0
offset_left = 33.0
offset_top = 27.0
offset_right = 102.0
offset_bottom = 84.0
mouse_default_cursor_shape = 2
icon = ExtResource("17_mgpl5")
flat = true
icon_alignment = 1
expand_icon = true

[node name="OptionButton" type="Button" parent="." unique_id=1595462345]
layout_mode = 0
offset_left = 109.0
offset_top = 27.0
offset_right = 203.0
offset_bottom = 83.0
mouse_default_cursor_shape = 2
icon = ExtResource("18_ju7yy")
flat = true
icon_alignment = 1
expand_icon = true

[node name="AyudaButton" type="Button" parent="." unique_id=1195573635]
layout_mode = 0
offset_left = 8.0
offset_top = 160.0
offset_right = 152.0
offset_bottom = 240.0
mouse_default_cursor_shape = 2
icon = ExtResource("15_8vkml")
flat = true
icon_alignment = 1
expand_icon = true

[node name="TimerTxt" type="Label" parent="." unique_id=174105630]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -112.0
offset_top = 16.0
offset_right = -14.0
offset_bottom = 64.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 60
text = "30:00"

[node name="Titulo" type="Label" parent="." unique_id=234315962]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 16.0
offset_right = 76.0
offset_bottom = 85.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 90
text = "QUIZ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1122139901]
position = Vector2(568, 312.00003)
scale = Vector2(2.0098689, 1.8186756)
sprite_frames = SubResource("SpriteFrames_ktjol")
frame = 5
frame_progress = 1.0

[node name="Preguntas" type="Label" parent="." unique_id=242908220]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -376.0
offset_top = 136.0
offset_right = -177.0
offset_bottom = 182.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 60
text = "Pregunta: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="nPregunta" type="Label" parent="." unique_id=962513778]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 136.0
offset_right = -152.0
offset_bottom = 182.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 60
text = "N"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Questions" type="BoxContainer" parent="." unique_id=1035770092]
layout_mode = 0
offset_left = 208.0
offset_top = 152.0
offset_right = 552.0
offset_bottom = 576.0

[node name="PanelContainer" type="PanelContainer" parent="Questions" unique_id=1585106713]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 9.9
theme_override_styles/panel = SubResource("StyleBoxEmpty_yrive")

[node name="Label" type="Label" parent="Questions/PanelContainer" unique_id=2066791430]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 46
text = "Pregunta"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Respuestas" type="Label" parent="." unique_id=1070255794]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 64.0
offset_top = 136.0
offset_right = 285.0
offset_bottom = 184.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 60
text = "Respuestas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="." unique_id=67365617]
layout_mode = 0
offset_left = 632.0
offset_top = 224.0
offset_right = 992.0
offset_bottom = 496.0
alignment = 1

[node name="Vbox_Respuestas" type="VBoxContainer" parent="BoxContainer" unique_id=1457183806]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="Button" type="Button" parent="BoxContainer/Vbox_Respuestas" unique_id=1398448871]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_u1o3b")
autowrap_mode = 3

[node name="Button2" type="Button" parent="BoxContainer/Vbox_Respuestas" unique_id=1755062234]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_rovev")
autowrap_mode = 3

[node name="Button3" type="Button" parent="BoxContainer/Vbox_Respuestas" unique_id=782926773]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_jobji")
autowrap_mode = 3

[node name="Button4" type="Button" parent="BoxContainer/Vbox_Respuestas" unique_id=1891612044]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_twig1")
autowrap_mode = 3

[node name="Final" type="ColorRect" parent="." unique_id=2002769232]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6156863)

[node name="Label" type="Label" parent="Final" unique_id=1657324866]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -344.0
offset_top = 168.0
offset_right = 413.0
offset_bottom = 210.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 60
text = "ACERTASTE LA SIGUIENTE CANTIDAD DE PREGUNTAS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Final" unique_id=825558865]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -360.0
offset_top = 104.0
offset_right = 405.0
offset_bottom = 146.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 60
text = "¡Felicidades por culminar el Quiz!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Final" unique_id=1217823123]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -148.0
offset_right = 171.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 200
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitLab" type="Button" parent="Final" unique_id=1801733189]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -184.0
offset_right = 218.0
offset_bottom = -122.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 50
text = "Volver al laboratorio"

[node name="Inicio" type="ColorRect" parent="." unique_id=363113355]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6156863)

[node name="Label" type="Label" parent="Inicio" unique_id=713252754]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -352.0
offset_top = 224.0
offset_right = 368.0
offset_bottom = 328.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 60
text = "Estas a punto de iniciar el Quiz
¿Deseas Continuar?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Inicio" unique_id=752586434]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -360.0
offset_top = 88.0
offset_right = 405.0
offset_bottom = 164.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 100
text = "CUIDADO..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitLab" type="Button" parent="Inicio" unique_id=543900888]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -368.0
offset_top = -264.0
offset_right = -16.0
offset_bottom = -202.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 50
text = "Tengo miedo..."

[node name="Continuar" type="Button" parent="Inicio" unique_id=119645798]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -264.0
offset_right = 400.0
offset_bottom = -202.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("19_ju7yy")
theme_override_font_sizes/font_size = 50
text = "Continuar..."

[node name="Ayuda" type="ColorRect" parent="." unique_id=563461712]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6156863)

[node name="Sprite2D" type="Sprite2D" parent="Ayuda" unique_id=810772175]
position = Vector2(592.00006, 328)
scale = Vector2(1.349375, 1.39)
texture = ExtResource("17_3s5pe")

[node name="exitAyuda" type="Button" parent="Ayuda" unique_id=567645624]
layout_mode = 0
offset_left = 152.0
offset_top = 48.0
offset_right = 224.0
offset_bottom = 96.0
mouse_default_cursor_shape = 2
icon = ExtResource("17_mgpl5")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Timer" type="Timer" parent="." unique_id=987206850]
autostart = true

[node name="SuccesSFX" type="AudioStreamPlayer" parent="." unique_id=399215444]
stream = ExtResource("36_4c4p7")
max_polyphony = 3

[node name="ErrorSFX" type="AudioStreamPlayer" parent="." unique_id=316620901]
stream = ExtResource("18_xcs45")
volume_db = -4.238
pitch_scale = 0.77

[node name="TicTacMbappe" type="AudioStreamPlayer" parent="." unique_id=212542407]
stream = ExtResource("40_u1o3b")
volume_db = -5.725
pitch_scale = 1.07

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="AyudaButton" to="." method="_on_ayuda_button_pressed"]
[connection signal="pressed" from="Final/ExitLab" to="." method="_on_exit_lab_pressed"]
[connection signal="pressed" from="Inicio/ExitLab" to="." method="_on_exit_lab_pressed"]
[connection signal="pressed" from="Inicio/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="Ayuda/exitAyuda" to="." method="_on_exit_ayuda_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
